<?xml version="1.0"?>
<package format="2">
  <name>slack_ros</name>
  <version>0.0.0</version>
  <description>The slack_ros package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-slackclient-pip</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
